dark mode fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
   }
 
   .activeNavTab {
-    @apply text-lightBlue dark:text-grayClassic50 hover:text-blue-800 font-semibold text-sm md:text-base hover:underline underline-offset-[6px] decoration-wavy duration-200;
+    @apply text-lightBlue dark:text-blue-400 hover:text-blue-800 font-semibold text-sm md:text-base hover:underline underline-offset-[6px] decoration-wavy duration-200;
   }
 
   .nonActiveNavTab {
